Related to assets pipeline

--- a/app/views/shared/_keyword_cloud.html.haml
+++ b/app/views/shared/_keyword_cloud.html.haml
@@ -14,4 +14,4 @@
         = submit_tag t('shared.keyword_cloud.submit'), :onclick=>"go_dim()"
 
   #darkBackgroundLayer.darkenBackground{:name=>"darkBackgroundLayer", :style=>"display:none;"}
-  %img#spinner.highZ{:src=>"/images/ajax-loader.gif", :style=>"display:none;"}
+  %img#spinner.highZ{:src=>"../../assets/ajax-loader.gif", :style=>"display:none;"}
