--- a/app/views/admin/_dupes.html.haml
+++ b/app/views/admin/_dupes.html.haml
@@ -1,42 +1,39 @@
-
-<!-- saved from url=(0114)https://raw.github.com/jstirnaman/BibApp/63a57d664a0d130fa78b939a9f025c2a3be70d17/app/views/admin/_dupes.html.haml -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style type="text/css"></style></head><body><pre style="word-wrap: break-word; white-space: pre-wrap;">-#
--# Render List of Duplicate Works with paging &amp; sorting options
+-#
+-# Render List of Duplicate Works with paging & sorting options
 -#
 - include_stylesheet('specific/admin/_dupes')
 - include_javascript('specific/admin/_dupes')
 #works.span-17.last
   - if @q
     %div
-      %h3= t('admin.duplicates.results', :count =&gt; @q.total_hits)
+      %h3= t('admin.duplicates.results', :count => @q.total_hits)
 
     / Sort Form
     .span-15.append-1.last
-      = form_tag "#works", :name =&gt; "dupes_form_show_rows", :method =&gt; :get do
+      = form_tag "#works", :name => "dupes_form_show_rows", :method => :get do
         #sort-by
           %label=t('app.show') + ":"
-          %select{:name =&gt; "rows"}
+          %select{:name => "rows"}
             - ["10", "20", "50", "100", "250", "500"].each do |opt|
-              %option{:value =&gt; "#{opt}", :selected =&gt; (opt == @rows ? 'selected' : nil)}= opt.titleize
+              %option{:value => "#{opt}", :selected => (opt == @rows ? 'selected' : nil)}= opt.titleize
 
           = render 'admin/dupes_hidden_tags'
 
           = submit_tag t('app.go')
 
-      -#= form_tag destroy_multiple_works_url, :name =&gt; "dupes_form", :method =&gt; :delete, :id =&gt; "dupes_form" do
-      = form_tag merge_multiple_works_url, :name =&gt; "dupes_form", :method =&gt; :delete, :id =&gt; "dupes_form" do     
+      = form_tag destroy_multiple_works_url, :name => "dupes_form", :method => :delete, :id => "dupes_form" do
         #bulk_links
-          = check_box_tag "select_dupes", "yes", false, :id =&gt; 'global-checkbox'
+          = check_box_tag "select_dupes", "yes", false, :id => 'global-checkbox'
           %strong=t('app.select_all')
 
-          = submit_tag t('app.merge_selected')
+          = submit_tag t('app.delete_selected')
           = render 'admin/dupes_hidden_tags'
 
         %div= will_paginate WillPaginate::Collection.new((params[:page]||1), @rows, @q.total_hits)
 
         %ol#work-list.span-17.clear-both.no-padding-or-margin
           - @works.each do |work|
-            = render "shared/work", :work =&gt; work, :allow_select =&gt; true, :show_status =&gt; true,
-              :show_dupes =&gt; true, :links_array =&gt; [:edit]
+            = render "shared/work", :work => work, :allow_select => true, :show_status => true,
+              :show_dupes => true, :links_array => [:edit]
 
-        %div= will_paginate WillPaginate::Collection.new((params[:page]||1), @rows, @q.total_hits)</pre></body></html>
+        %div= will_paginate WillPaginate::Collection.new((params[:page]||1), @rows, @q.total_hits)
